# OnBoardComputer

./: .gitignore  .gitmodules  README.md
.github/workflows/: stm32_build.yml  test.yml
ATM_Separ/: ATM_Separ.ino  Globals.h  Initializing.ino  Loops.ino  doSeparation.ino
ESP_Brain/: platformio.ini
ESP_Brain/include/: LoopTasks.h  SDcard.h  SingleTasks.h  StateChanger.h  Tasks.h  ThrustController.h  Timer_ms.h  dataStructs.h  now.h  ota.h  queue.h
ESP_Brain/obsolete/: ota.cpp  ota.h
ESP_Brain/src/: Adafruit_BME280.cpp  LoopTasks.cpp  SDcard.cpp  SingleTasks.cpp  StateChanger.cpp  Tasks.cpp  ThrustController.cpp  Timer_ms.cpp  dataStruct.h  dataStructs.h  main.cpp  now.cpp  now.h  ota.cpp  queue.c  queue.cpp
OBC_Attiny/src/: main.cpp
OBC_ESP/: platformio.ini  readme.md  xd.txt
OBC_ESP/.github/workflows/: test.yml
OBC_ESP/include/: RecoverySTM.h  SDcard.h  config.h  dataStructs.h  errors.h  mainStructs.h  missionTimer.h  now.h  pinout.h  tasksAndTimers.h  timers.h
OBC_ESP/include/com/: RecoverySTM.h  now.h  txEspNow.h
OBC_ESP/include/components/: runcam.h
OBC_ESP/include/pysd/: gen_pysd.h
OBC_ESP/include/sensors/: LIS3MDL.h  LSM6.h  imuAPI.h
OBC_ESP/include/structs/: dataStructs.h  errors.h  globalStruct.h  hardwareManagment.h  mainStructs.h  options.h  optionsStruct.h  pysd_data_structs.h  rocketControl.h  stateMachine.h
OBC_ESP/src/: RecoverSTM.cpp  SDcard.cpp  appCpuLoopTasks.cpp  config.cpp  dataStructs.cpp  errors.cpp  main.cpp  mainStruct.cpp  mainStructs.cpp  missionTimer.cpp  now.cpp  proCpuLoopTasks.cpp  softwareTimers.cpp  structs.cpp  timers.cpp
OBC_ESP/test/: data_structs_test.cpp  errors.cpp  options.cpp  test_options.cpp  test_runner.cpp  tests.h
OBC_ESP_Obsolete/: platformio.ini  readme.md
OBC_ESP_Obsolete/include/: pinout.h
OBC_ESP_Obsolete/src/: config.cpp  main.cpp
OBC_ESP_Obsolete/test/: test_runner.cpp
OBC_STM/: .cproject  .cproject.bak  .mxproject  .project.bak  CMakeLists.txt  Makefile  OBC_STM Debug.launch  OBC_STM.ioc  README.md  STM32-for-VSCode.config.yaml  STM32Make.make
OBC_STM/Core/Inc/: Functions.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
OBC_STM/Core/Src/: Functions.c  adc.c  gpio.c  i2c.c  iwdg.c  main.c  stm32f1xx_it.c
OBC__Attiny/: platformio.ini
OBC__Attiny/src/: main.cpp
PCB/R4_Odzyskowa/: PCB_R4_Odzyskowa.json  R4_Odzyskowa.json  info
PCB/R4_Odzyskowa_Dolna/: 1-PCB_PCB_R4_Odzyskowa_Dolna.json  1-Schematic_R4_Odzyskowa_Dolna.json  README.txt
PCB/R4_Odzyskowa_Gorna/: 1-PCB_PCB_R4_Odzyskowa.json  1-Schematic_R4_Odzyskowa_Gorna.json
R4S_Main/: .cproject  .mxproject  .project  R4S_Main Debug.launch  R4S_Main.ioc
R4S_Round/: .cproject  .mxproject  .project  R4S_Round.ioc
R4_Separation/: .cproject  .mxproject  .project  R4_Separation Debug.launch  R4_Separation.ioc
STM_Round/: .cproject  .mxproject  STM_Round Debug.launch  STM_Round.ioc
docs/: MCB_DiagramTasków.jpg 
(+116 files in other folders)
